force-app/main/default/objects/Opportunities__c/Opportunities__c.object-meta.xml
<CustomObject>
    <label>Opportunities</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>