force-app/main/default/objects/Opportunities__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>