force-app/main/default/objects/Opportunities__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>