force-app/main/default/objects/Opportunities__c/fields/Contact_Name2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name2__c</fullName>
    <formula>Last_Name__c &amp; &quot; &quot; &amp; First_Name__c</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>