force-app/main/default/objects/Opportunities__c/fields/ExistingOppty__c.field-meta.xml
<CustomField>
    <fullName>ExistingOppty__c</fullName>
    <label>ExistingOppty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>