force-app/main/default/objects/Opportunities__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Categor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
            <value>
                <fullName>quarterly</fullName>
            </value>
            <value>
                <fullName>half yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>