force-app/main/default/objects/Opportunities__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>IndiaMart</fullName>
            </value>
            <value>
                <fullName>TradeIndia</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Mastri</fullName>
            </value>
            <value>
                <fullName>Erection Person</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
                <isActive>false</isActive>
                <label>Purchased List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>