force-app/main/default/objects/Opportunities__c/fields/Lost_to_which_competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_which_competitor__c</fullName>
    <label>Lost to which competitor</label>
    <type>TextArea</type>
</CustomField>