force-app/main/default/objects/Opportunities__c/fields/Mill_Type__c.field-meta.xml
<CustomField>
    <fullName>Mill_Type__c</fullName>
    <label>Mill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>