force-app/main/default/objects/Opportunities__c/fields/MobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone2__c</fullName>
    <formula>AccountID__r.Mobiles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobilePhone2</label>
    <type>Text</type>
</CustomField>