force-app/main/default/objects/Opportunities__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <formula>AccountID__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobilePhone</label>
    <type>Text</type>
</CustomField>