force-app/main/default/objects/Opportunities__c/fields/Model_Quote__c.field-meta.xml
<CustomField>
    <fullName>Model_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Quote(Existing)</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>