force-app/main/default/objects/Opportunities__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name(lookup)</label>
    <referenceTo>Opportunities__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>