force-app/main/default/objects/Opportunities__c/fields/opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>