force-app/main/default/objects/Opportunities__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>