force-app/main/default/objects/Opportunities__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>