force-app/main/default/objects/Opportunities__c/fields/Primary_Campaign_source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>