force-app/main/default/objects/Opportunities__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>