force-app/main/default/objects/Opportunities__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
                <default>true</default>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
                <isActive>false</isActive>
                <label>Prospecting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>