force-app/main/default/objects/Opportunities__c/fields/Sub_Cost_for_Quoted_price__c.field-meta.xml
<CustomField>
    <fullName>Sub_Cost_for_Quoted_price__c</fullName>
    <label>Sub Cost(for Quoted price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>