force-app/main/default/objects/Opportunities__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer-upgrade</fullName>
            </value>
            <value>
                <fullName>Existing Customer-Replacement</fullName>
            </value>
            <value>
                <fullName>Existing Customer-downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>