force-app/main/default/objects/Opportunities__c/fields/Type_of_Commodity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Commodity__c</fullName>
    <label>Type of Commodity</label>
    <type>TextArea</type>
</CustomField>