force-app/main/default/objects/Opportunities__c/listViews/MyOpportunities_User.listView-meta.xml
<ListView>
    <fullName>MyOpportunities_User</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>Mill_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Territory__c</columns>
    <columns>Probability__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>MyOpportunities-User</label>
</ListView>